# ilhaadk

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.py  docker-compose.yml  pyproject.toml
dashboard-web/: .dockerignore  next.config.ts  package-lock.json  package.json
dashboard-web/src/app/: DashboardClient.tsx  globals.css  layout.tsx
dashboard-web/src/app/api/dashboard/[...path]/: route.ts
db/: schema.sql
db/migrations/: 2026_05_01_kauan_upgrades_2.sql  2026_05_02_bot_pause.sql  2026_05_02_processed_messages.sql  2026_05_02_stage_history.sql
sdr_ilha_ar/: __init__.py  channel.py  config.py  dashboard_api.py  llm_app.py  notify.py  prompts.py  repository.py  state_machine.py  tools_impl.py  webhook_api.py
sdr_ilha_ar/.adk/: session.db
sdr_ilha_ar/workers/: __init__.py  __main__.py  cli.py  processor.py
tests/: conftest.py  test_appointments_endpoints.py  test_appointments_slots.py  test_bot_pause_endpoints.py  test_followup_stage_gate.py  test_notify_maps.py  test_notify_multi_admin.py  test_recall_6m.py  test_robustness.py  test_stage_info_endpoint.py  test_state_machine.py
